= Counterclockwise ChangeLog
Laurent Petit <laurent dot petit at gmail dot com>
:sectanchors:
:sectlinks:
:source-highlighter: coderay
:experimental:
:toc: left
:toc-title: ChangeLog
:toclevels: 0

== Counterclockwise 0.34.1-SNAPSHOT

`0.34.1-SNAPSHOT` released on XXX xx, 2015


== Counterclockwise 0.34.0

`0.34.0` released on August 21, 2015

=== Editor
- Thanks to User Plugin `ccw-plugin-hyperlink` which is embedded by default, a new kind of hyperlink has been added: for opening relative or absolute files from literal Strings. Will search relative to the current location, to the java classpath root folders if java project, to the project root, or to the filesystem root. Use `Cmd+Click` or `F3`

=== Keyboard Shortcuts
- Removed the default binding for the `Show Active REPL View` command since it does not work well with German keyboard (prevents from typing @)

=== Issues
- When starting arbitrary Leiningen command through `Alt+L L`, there was a possibility that the command hang forever. Fix #840


== Counterclockwise 0.33.0

`0.33.0` released on August 5, 2015

=== Editor
- double-click when in code now does the same as if the user had triggered the `Expand Selection Right` command. The net result is that you can select entire forms by double clicking on their start character ; you can also select entire symbols even if there are hypens inside, etc. Fixes #516

=== Process Launcher
- Fix an issue on OS X to preventively fix the PATH environement variable which is generally not even set with `/usr/local/bin` included. Fixes #709
- Launching a new REPL now works similarly from within an editor or from the contextual menu of a clojure file: the editor content or file content is loaded, and the REPL switches to the corresponding namespace. Fixes #833

=== Preferences
- Fix spurious exceptions thrown after having changed text color preferences


== Counterclockwise 0.32.0

`0.32.0` released on July 29, 2015
