@@ -12,6 +12,9 @@ Laurent Petit <laurent dot petit at gmail dot com>
 
 `0.34.1-SNAPSHOT` released on XXX xx, 2015
 
+=== REPL
+- The REPL View is now visible in all Perspectives, not only the perspective where it was opened. Fix #686
+
 
 == Counterclockwise 0.34.0
 
